hphp/test/zend/good/ext/standard/tests/class_object/method_exists_basic_003.php
<?hh
/* Prototype  : proto bool is_subclass_of(object object, string class_name)
 * Description: Returns true if the object has this class as one of its parents
 * Source code: Zend/zend_builtin_functions.c
 * Alias to functions:
 */

<<__EntryPoint>> function method_exists_basic_003(): void {
var_dump(method_exists('UndefC', 'func'));

echo "Done";
}
